<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/radio_group_question1"
    tools:context="com.udacity.wertonguimaraes.quizapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:gravity="start"
        android:textSize="17sp"/>

    <RadioButton
        android:id="@+id/answer_amsterdam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amsterdam" />

    <RadioButton
        android:id="@+id/answer_london"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/london" />

    <RadioButton
        android:id="@+id/answer_rome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rome" />
</RadioGroup>
